recursion.cons.increasing.Increasing.scala.error
Compilation error:
Increasing:4: error: overloaded method value < with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (Boolean)
  if (l.head<increasing(l.tail)) l.tail
            ^Increasing:4: error: type mismatch;
 found   : List[Int]
 required: Boolean
  if (l.head<increasing(l.tail)) l.tail
                                   ^