recursion.cons.increasing.Increasing.scala.code
def increasing(l:List[Int]): Boolean = {
  if (l.tail==Nil) true
  if (l.head<increasing(l.tail)) l.tail
  else false
}